--- a/watch/FIF_Watch/app/src/main/res/drawable/play.xml
+++ b/watch/FIF_Watch/app/src/main/res/drawable/play.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="960">
   <path
       android:fillColor="#FF000000"
-      android:pathData="m380,660 l280,-180 -280,-180v360ZM480,880q-83,0 -156,-31.5T197,763q-54,-54 -85.5,-127T80,480q0,-83 31.5,-156T197,197q54,-54 127,-85.5T480,80q83,0 156,31.5T763,197q54,54 85.5,127T880,480q0,83 -31.5,156T763,763q-54,54 -127,85.5T480,880Z"/>
+      android:pathData="M320,760v-560l440,280 -440,280Z"/>
 </vector>
