--- a/android/FIF_Android/app/src/main/res/values/themes.xml
+++ b/android/FIF_Android/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.FIF_Android" parent="android:Theme.Material.Light.NoActionBar" >
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@color/background</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowLightNavigationBar">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
