--- a/watch/FIF_Watch/app/src/main/res/drawable/warning.xml
+++ b/watch/FIF_Watch/app/src/main/res/drawable/warning.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:fillColor="#FFDD4247"
-      android:pathData="M480,680q17,0 28.5,-11.5T520,640q0,-17 -11.5,-28.5T480,600q-17,0 -28.5,11.5T440,640q0,17 11.5,28.5T480,680ZM440,520h80v-240h-80v240ZM480,880q-83,0 -156,-31.5T197,763q-54,-54 -85.5,-127T80,480q0,-83 31.5,-156T197,197q54,-54 127,-85.5T480,80q83,0 156,31.5T763,197q54,54 85.5,127T880,480q0,83 -31.5,156T763,763q-54,54 -127,85.5T480,880Z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M480,840q-33,0 -56.5,-23.5T400,760q0,-33 23.5,-56.5T480,680q33,0 56.5,23.5T560,760q0,33 -23.5,56.5T480,840ZM400,600v-480h160v480L400,600Z"/>
 </vector>
