--- a/frontend/src/assets/styles/userselect.css
+++ b/frontend/src/assets/styles/userselect.css
@@ -11,7 +11,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   padding: 1vw 2vw;
 }
@@ -24,6 +24,7 @@
 .user-profile-box,
 .profile-add-button {
   width: 26%;
+  margin: 0 3.6%;
   margin-bottom: 2vw;
   cursor: pointer;
   text-decoration: none;
