[Web] Feat: 위험 식재료 알림 기능 추가

--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -88,6 +88,15 @@ button {
   animation: none;
 }
 
+.open-door-button {
+  position: absolute;
+  width: 12.8%;
+  height: 46.4%;
+  top: 12.1%;
+  left: 34.2%;
+  cursor: pointer;
+}
+
 @keyframes slide-in {
   from {
     left: 0;
