--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -91,10 +91,22 @@ button {
 .open-door-button {
   position: absolute;
   width: 12.8%;
-  height: 46.4%;
+  height: 46.3%;
   top: 12.1%;
-  left: 34.2%;
+  left: 34.4%;
   cursor: pointer;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid white;
+  border-style: dashed;
+  transition: all 0.5s;
+}
+
+.open-door-button:hover {
+  opacity: 0.5;
+  color: white;
 }
 
 @keyframes slide-in {
