--- a/frontend/src/assets/styles/cooking/history.css
+++ b/frontend/src/assets/styles/cooking/history.css
@@ -58,14 +58,14 @@
   display: flex;
   flex-direction: row;
   width: calc(200%);
-  height: calc(100% - 8.5vw);
+  max-height: calc(100% - 8.5vw);
   overflow: hidden;
   transition: all 0.3s;
 }
 
 .history-recipe-list {
   width: 49%;
-  height: 100%;
+  max-height: 100%;
   display: flex;
   flex-wrap: wrap;
   padding: 1.3vw 0.8vw 1.3vw 1.5vw;
