--- a/frontend/src/assets/styles/cooking/recipesave.css
+++ b/frontend/src/assets/styles/cooking/recipesave.css
@@ -7,6 +7,19 @@
   align-items: center;
 }
 
+.recipe-save-compoent-list-scroll {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 5%;
+  height: calc(100% - 8vw);
+  overflow-y: scroll;
+}
+
+.recipe-save-compoent-list-scroll::-webkit-scrollbar {
+  display: none;
+}
+
 .recipe-save-title {
   width: 100%;
   margin-top: 1vw;
@@ -26,7 +39,7 @@
 
 .recipe-save-box {
   position: relative;
-  width: 90%;
+  width: 100%;
   height: 5vw;
   overflow: hidden;
   border-radius: 1vw;
@@ -42,7 +55,7 @@
   width: 100%;
   height: 100%;
   background: black;
-  opacity: 0.3;
+  opacity: 0.5;
 }
 
 .recipe-save-image {
@@ -53,7 +66,7 @@
 
 .recipe-save-component-list-container {
   z-index: 0;
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,6 +77,17 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.recipe-save-memo-input {
+  resize: none;
+  outline: none;
+  padding: 0.5vw;
+  border-radius: 0.5vw;
+  margin-bottom: 1.5vw;
+  margin-top: 0.5vw;
+  border: 1px solid rgba(0, 0, 0, 0.233);
+  font-size: 1vw;
 }
 
 .recipe-save-component-list-scroll-box {
