[Web] Fix: step 넘어가는 로직 수정

--- a/frontend/src/assets/styles/cooking/recipe.css
+++ b/frontend/src/assets/styles/cooking/recipe.css
@@ -166,6 +166,10 @@
   cursor: pointer;
 }
 
+.cooking-recipe-back-button {
+  /* color: var(--primary-color); */
+}
+
 .header-icon-bookmark {
   height: 1.5vw;
 }
