[Web] Feat: Logo 적용

--- a/frontend/src/assets/styles/cooking/header.css
+++ b/frontend/src/assets/styles/cooking/header.css
@@ -7,9 +7,14 @@
   padding: 1vw;
 }
 
+.cooking-header-logo {
+  height: 2vw;
+}
+
 .cooking-header-title {
   color: var(--primary-color);
   cursor: pointer;
+  display: flex;
 }
 
 .cooking-header-icon-box {
