--- a/frontend/src/assets/styles/cooking/userprofile.css
+++ b/frontend/src/assets/styles/cooking/userprofile.css
@@ -1,7 +1,7 @@
 .user-health-info-box {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-top: 0.5vw;
   border-radius: 1vw;
   background-color: white;
@@ -34,6 +34,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  margin-top: 1vw;
 }
 
 .user-health-data {
@@ -43,13 +44,14 @@
   padding: 0.7vw 1vw;
   border-radius: 1.4vw;
   margin: 0.2vw 0;
-  background-color: #c4c4c46d;
+  background-color: rgba(255, 182, 56, 0.596);
 }
 
 .user-health-data-name {
-  margin-left: 0.1vw;
+  margin-left: 0.3vw;
   margin-right: 0.5vw;
-  margin-top: 0.2vw;
+  margin-top: 0.3vw;
+  font-size: 1.6vw;
 }
 
 .user-health-data-value {
@@ -62,16 +64,18 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
-  height: 1.5vw;
+  flex-direction: row;
+  height: 1.6vw;
   margin-bottom: 0.3vw;
+  margin-top: 1vw;
 }
 
 .user-health-data-info {
   position: absolute;
   top: 0;
-  padding: 0.2vw 0.6vw;
+  padding: 0.2vw 0.5vw;
   transform: translateX(-40%);
-  background-color: blue;
+  background-color: #fe9838c2;
   color: white;
   font-weight: 600;
   border-radius: 1vw;
@@ -111,11 +115,15 @@
 
 .user-health-data-progress-wrapper {
   width: 10vw;
-  height: 1vw;
+  height: 0.9vw;
   background-color: white;
   position: relative;
   border-radius: 1vw;
   overflow: hidden;
+}
+
+.user-health-data-progress-wrapper.stress {
+  background: var(--stress-progress-gradient);
 }
 
 .user-health-data-progress-bar {
@@ -123,4 +131,23 @@
   width: 0.3vw;
   height: 1vw;
   background-color: black;
+  opacity: 0.5;
+}
+
+.user-health-data-progress-bar.sleep {
+  width: 100%;
+  transform: translateX(-100%);
+  background-color: #bb88ff;
+}
+
+.user-health-data-progress-bar.bloodOxygen {
+  background-color: #0099ee;
+}
+
+.user-health-data-info.sleep {
+  background-color: #bc88ffa2;
+}
+
+.user-health-data-info.bloodOxygen {
+  background-color: #009beea2;
 }
