--- a/frontend/src/assets/styles/ingredients.css
+++ b/frontend/src/assets/styles/ingredients.css
@@ -10,7 +10,7 @@
 }
 
 .ingredient-manage-box {
-  width: 25vw;
+  width: 30vw;
   height: 45vw;
   display: flex;
   flex-direction: column;
@@ -45,8 +45,8 @@
 }
 
 .ingredient-manage-item-image {
-  width: 4vw;
-  height: 4vw;
+  width: 3vw;
+  height: 3vw;
   object-fit: cover;
   background-color: white;
   border-radius: 50%;
@@ -68,6 +68,25 @@
   cursor: pointer;
 }
 .ingredient-mange-item:hover {
-  background-color: var(--primary-color);
+  background-color: var(--user-chat-color);
   color: white;
+}
+
+.ingredient-manage-item-checkbox {
+  margin-left: auto;
+}
+
+.ingrdient-manage-button {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1vw;
+  background-color: var(--primary-color);
+  cursor: pointer;
+  border-radius: 2vw;
+  margin-top: 1vw;
+  color: white;
+  font-size: 1.2vw;
+  font-weight: 600;
 }
