[Web] Fix : Progress bar 깨지는 현상 해결

--- a/frontend/src/assets/styles/cooking/profile.css
+++ b/frontend/src/assets/styles/cooking/profile.css
@@ -7,9 +7,15 @@
 
 .profile-content-container {
   width: 100%;
+  height: calc(100% - 7vw);
   display: flex;
   flex-direction: column;
   padding: 0 1.5vw;
+  overflow-y: scroll;
+}
+
+.profile-content-container::-webkit-scrollbar {
+  display: none;
 }
 
 .prefrence-menu-box {
