--- a/frontend/src/assets/styles/cooking/userprofile.css
+++ b/frontend/src/assets/styles/cooking/userprofile.css
@@ -73,13 +73,14 @@
 .user-health-data-info {
   position: absolute;
   top: 0;
-  padding: 0.2vw 0.5vw;
+  padding: 0.2vw 0;
   transform: translateX(-40%);
   background-color: #fe9838c2;
   color: white;
   font-weight: 600;
   border-radius: 1vw;
   font-size: 0.8vw;
+  text-align: center;
 }
 
 .user-health-data-progress {
@@ -144,10 +145,17 @@
   background-color: #0099ee;
 }
 
+.user-health-data-info.stress {
+  width: 1.6vw;
+  padding-bottom: 0.3vw;
+}
+
 .user-health-data-info.sleep {
+  width: 3.3vw;
   background-color: #bc88ffa2;
 }
 
 .user-health-data-info.bloodOxygen {
+  width: 2.8vw;
   background-color: #009beea2;
 }
