--- a/frontend/src/assets/styles/cooking/recipe.css
+++ b/frontend/src/assets/styles/cooking/recipe.css
@@ -21,7 +21,7 @@
   width: 100%;
   height: 100%;
   background: var(--background-filter-gradient);
-  opacity: 0.4;
+  opacity: 0.5;
   top: 0;
   left: 0;
 }
@@ -46,11 +46,12 @@
 }
 
 .recipe-header-tag {
-  padding: 0.3vw 0.9vw;
-  background-color: #56565671;
+  padding: 0.4vw 0.9vw;
+  /* background-color: rgba(255, 255, 255, 0.267); */
+  background-color: #ffb638b4;
   border-radius: 1vw;
   color: white;
-  font-size: 0.7vw;
+  font-size: 0.9vw;
   margin-right: 0.5vw;
   opacity: 0.9;
 }
@@ -167,7 +168,8 @@
 }
 
 .cooking-recipe-back-button {
-  /* color: var(--primary-color); */
+  color: var(--primary-color);
+  color: white;
 }
 
 .header-icon-bookmark {
