--- a/frontend/src/assets/styles/cooking/recipesteps.css
+++ b/frontend/src/assets/styles/cooking/recipesteps.css
@@ -65,6 +65,7 @@
   flex-direction: column;
   flex-shrink: 0;
   margin: 0 10%;
+  cursor: grab;
 }
 
 .content-card-image {
@@ -84,6 +85,7 @@
   display: flex;
   flex-direction: column;
   word-break: keep-all;
+  cursor: grab;
 }
 
 .content-card-box-description {
